force-app/main/default/objects/Options__c/Options__c.object-meta.xml
<CustomObject>
    <label>Options</label>
    <nameField>
        <label>Options Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>