force-app/main/default/objects/Options__c/fields/Available_Stock_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Available_Stock_Quantity__c</fullName>
    <formula>2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Stock Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>