force-app/main/default/objects/Options__c/fields/Catalog2__c.field-meta.xml
<CustomField>
    <fullName>Catalog2__c</fullName>
    <label>Catalog2</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>