force-app/main/default/objects/Options__c/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Catalog</label>
    <referenceTo>Catalog__c</referenceTo>
    <relationshipLabel>Options (Catalog)</relationshipLabel>
    <relationshipName>Options1</relationshipName>
    <type>Lookup</type>
</CustomField>