force-app/main/default/objects/Options__c/fields/Is_Option_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Option_Available__c</fullName>
    <formula>Optional__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Option Available</label>
    <type>Checkbox</type>
</CustomField>