force-app/main/default/objects/Options__c/fields/Product_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Product_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <type>Lookup</type>
</CustomField>