force-app/main/default/objects/Options__c/fields/Required_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Required_Quantity__c</fullName>
    <label>Required Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>